# webgpu-20200828-simdgroup

./: .gitignore  .gitmodules  README.md
annotations/: transcript.md  webgpu-20200828-simdgroup.m4a
docs/: index.html
samples/: CMakeLists.txt  README.md  samples.cpp  samples_input_4.comp  samples_output_4.comp
slides/: README.md  package.json  slides.md
